完成部分geopackage代码